--- a/assets/styles.css
+++ b/assets/styles.css
@@ -90,6 +90,7 @@ body , header , footer{
 .open{
     right: 0px;
     transition: all 0.5s ease;
+    z-index: 3;
 }
 
 @media screen and (max-width: 900px){
@@ -228,4 +229,91 @@ h1 span{
 .rge img{
     height: 110px;
     margin-left: -3rem;
+}
+
+.img-clim{
+    height: 420px;
+    margin-right: -20px;
+}
+
+.img-chambre-froide{
+    height: 380px;
+    margin-left: -20px;
+    margin-top: 90px;
+}
+
+.bi-play{
+    font-size: 2rem;
+    color: #696969;
+    padding: 1rem;
+    border-radius: 50%;
+    background-color: rgb(255, 255, 255);
+    height: 30px;
+    z-index: 3;
+}
+
+.cold-subtitle{
+    font-size: 1.3rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    letter-spacing: 7px;
+    color: #0066C5;
+}
+
+.cold-title{
+    font-size: 2.4rem;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
+    color: #000000;
+}
+
+.cold-p{
+    font-size: 1.3rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    color: #000000;
+    width: 70%;
+}
+
+.cold-list{
+    font-size: 1.3rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    color: #000000;
+    width: 70%;
+}
+.cold-check-li{
+    font-size: 1.5rem;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 500;
+}
+
+
+.cold-btn{
+    color: white;
+    padding: 0.8rem;
+    background-color: #0066C5;
+    border-radius: 10px;
+    font-size: 1.3rem;
+    font-family: 'Montserrat', sans-serif;
+    transition: all 0.5s ease;
+}
+
+.cold-btn:hover{
+    background-color: #045397;
+    transition: all 0.5s ease;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.cold-phone{
+    background-color: #e6e3e3;
+    padding: .8rem;
+    font-size: 1.3rem;
+    border-radius: 50%;
+}
+
+.cold-phone-number{
+    color: #222222;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
 }
