--- a/assets/utils.css
+++ b/assets/utils.css
@@ -93,6 +93,33 @@
     font-size: 5rem;
 }
 
+@media screen and (max-width: 900px) {
+    .fs1{
+        font-size: 0.5rem;
+    }
+
+    .fs1-5{
+        font-size: 0.8rem;
+    }
+
+    .fs2{
+        font-size: 1.2rem;
+    }
+
+    .fs3{
+        font-size: 1.5rem;
+    }
+
+    .fs4{
+        font-size: 2rem;
+    }
+
+    .fs5{
+        font-size: 3rem;
+    }
+    
+}
+
 /* text-position */
 
 .text-c{
@@ -390,6 +417,10 @@ ul{
 
 .w-35 {
     width: 35em
+}
+
+.w-50{
+    width: 50%;
 }
 
 .w-75{
