ajout du formulaire et de l'animation vent

--- a/assets/utils.css
+++ b/assets/utils.css
@@ -447,3 +447,17 @@ ul{
 .relative{
     position: relative;
 }
+
+
+.montserrat{
+    font-family: 'Montserrat', sans-serif;
+}
+
+.ubuntu{
+    font-family: 'Ubuntu', sans-serif;
+}
+
+
+.bold{
+    font-weight: bold;
+}
