--- a/assets/styles.css
+++ b/assets/styles.css
@@ -14,11 +14,11 @@ body{
     top: 0;
     z-index: 9999999999999999999;
     transition: all 0.2s ease;
+    width: 100%;
 }
 
 .navbg-scroll{
     background-color: #ffffff;
-    width: 100%;
     transition: all 0.2s ease;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
@@ -33,6 +33,8 @@ body{
     padding: 0.7rem;
     font-size: 1.3rem;
     font-weight: 500;
+    border-radius: 14px;
+    transition: all 0.5s ease;
 }
 
 .navbar-phone {
@@ -51,6 +53,7 @@ body{
     color: white !important;
     background-color: #0066C5;
     border-radius: 14px;
+    transition: all 0.5s ease;
 }
 
 .point-red{
@@ -1572,3 +1575,72 @@ footer{
     
 }
 
+@media screen and (min-width: 1700px){
+    .personnage{
+        height: 800px;
+        margin-right: 4rem;
+    }
+
+    .red1{
+        right: 676px;
+    }
+
+    .f1{
+        right: 606px;
+    }
+
+}
+
+@media screen and (min-width: 1800px){
+    .personnage{
+        height: 850px;
+        margin-right: 6rem;
+    }
+
+    .red1{
+        right: 776px;
+    }
+
+    .red2 {
+        right: 121px;
+        top: 77px;
+        height: 30px;
+        width: 30px;
+    }
+
+    .f1{
+        height: 700px;
+        right: 756px;
+    }
+
+    .fondu2{
+        right: 324px;
+    }
+
+    .blue1 {
+        right: 233px;
+        top: 608px;
+        height: 30px;
+        width: 30px;
+    }
+
+    
+    @keyframes trait {
+        0%{
+            opacity: 1;
+            right: 324px;
+        }
+    
+        99%{
+            right: 800px;
+        }
+    
+        100%{
+            opacity: 0;
+            right: 324px;
+        }
+        
+    }
+
+
+}
